; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_main.c_mlx4_check_dev_cap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_main.c_mlx4_check_dev_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_dev_cap = type { i32 }

@MLX4_DEV_CAP_FLAG2_80_VFS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"Requested %d VFs, but FW does not support more than 64\0A\00", align 1
@MLX4_DEV_CAP_CHECK_NUM_VFS_ABOVE_64 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, %struct.mlx4_dev_cap*, i32*)* @mlx4_check_dev_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx4_check_dev_cap(%struct.mlx4_dev* %0, %struct.mlx4_dev_cap* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_dev*, align 8
  %6 = alloca %struct.mlx4_dev_cap*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %5, align 8
  store %struct.mlx4_dev_cap* %1, %struct.mlx4_dev_cap** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %11, %14
  %16 = load i32*, i32** %7, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 2
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %15, %18
  store i32 %19, i32* %8, align 4
  %20 = load %struct.mlx4_dev_cap*, %struct.mlx4_dev_cap** %6, align 8
  %21 = getelementptr inbounds %struct.mlx4_dev_cap, %struct.mlx4_dev_cap* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @MLX4_DEV_CAP_FLAG2_80_VFS, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %34, label %26

26:                                               ; preds = %3
  %27 = load i32, i32* %8, align 4
  %28 = icmp sge i32 %27, 64
  br i1 %28, label %29, label %34

29:                                               ; preds = %26
  %30 = load %struct.mlx4_dev*, %struct.mlx4_dev** %5, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @mlx4_err(%struct.mlx4_dev* %30, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i32 %31)
  %33 = load i32, i32* @MLX4_DEV_CAP_CHECK_NUM_VFS_ABOVE_64, align 4
  store i32 %33, i32* %4, align 4
  br label %35

34:                                               ; preds = %26, %3
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %29
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @mlx4_err(%struct.mlx4_dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
